# imageProcessing

./: CMakeLists.txt
libjpeg/jpeg-6b/: jpeglib.h
libjpeg2/libjpeg62_6b2-3_amd64/: data.tar
libjpeg2/libjpeg62_6b2-3_amd64/usr/share/doc/libjpeg62/: copyright
src/: edgeDetection.c  edgeDetection.h  greyscale.c  greyscale.h  imgStruct.h  inverter.c  inverter.h  main.c  main.h  masks.c  masks.h  utils.c  utils.h
src/fileMan/: fileAccess.c  fileAccess.h
